# result-guide

./: .gitignore  Cargo.toml  README.md
crates/entities/: Cargo.toml
crates/entities/src/: report.rs  test_step.rs
crates/gui/: Cargo.toml
crates/gui/src/: cli.rs  main.rs
crates/srv/: Cargo.toml
crates/srv/src/: error.rs  main.rs
crates/srv/src/entities/: prelude.rs  report.rs
src/: error.rs  main.rs  migrator.rs
src/entities/: mod.rs  report.rs  test_step.rs
src/migrator/: m20220812_000001_create_report_table.rs  m20220812_000002_create_test_step_table.rs
