[package]
name = "result_guide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.9", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
sea-orm-migration = "0.9"
tokio = { version = "1", features = [ "full" ] }
axum = "0.5"
hyper = { version = "0.14", features = [ "full" ] }
tower = "0.4"
serde = "1"
serde_json = "1"
