[workspace]
members = ["crates/*"]

[workspace.dependencies]
sea-orm = { version = "0.11", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
sea-orm-migration = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1"
serde_json = "1"
eyre = "0.6.8"
clap = { version = "4.1.4", features = [ "derive" ] }

[profile.release]
lto = true
