[package]
name = "result_guide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.11", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
sea-orm-migration = "0.11"
tokio = { version = "1", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.6", features = ["macros"] }
hyper = { version = "0.14", features = [ "full" ] }
tower = "0.4"
serde = "1"
serde_json = "1"
mime = "0.3.16"
eyre = "0.6.8"

[dev-dependencies]
temp-file = "0.1.7"
