[package]
name = "result_guide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
tokio = { version = "1", features = [ "full" ] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.6", features = ["macros"] }
hyper = { version = "0.14", features = [ "full" ] }
tower = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
mime = "0.3.17"
eyre = { workspace = true }

entities = {path = "../entities"}

[dev-dependencies]
temp-file = "0.1.7"
